--- a/src/app/components/log_in/log_in.scss
+++ b/src/app/components/log_in/log_in.scss
@@ -1,5 +1,5 @@
 .body-back {
-  background-color: $register-back;
+  background-color: $wolox-blue;
 }
 
 .form-formate {
@@ -7,11 +7,33 @@
   background-color: $wolox-white;
   display: flex;
   flex-direction: column;
-  height: 714px;
+  height: 100vh;
   justify-content: space-around;
   margin: auto;
   padding: 20px 10px;
   width: 694px;
+}
+
+.logo-wolox-life {
+  margin-top: 30px;
+}
+
+.title-w-life {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 80px;
+}
+
+.field-section {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 50px 0;
 }
 
 .title {
@@ -21,24 +43,36 @@
 
 .field {
   justify-content: flex-start;
+  padding: 30px 0;
 }
 
-.box-style {
+.mail {
   background: $submit-green;
   border: 0;
   height: 38px;
   width: 541px;
 }
 
+.box-style {
+  background: $submit-green;
+  border: 0;
+  height: 38px;
+  padding-bottom: 30px;
+  width: 541px;
+}
+
 .but-style {
-  background: $wolox-white;
-  border: 1px solid $magnifying-glass-green;
+  align-self: center;
+  background-color: $wolox-blue;
+  // background-color: $wolox-green;
+  border: 1px solid $wolox-blue;
   border-radius: 10px;
-  color: $magnifying-glass-green;
+  color: $wolox-white;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: bold;
-  padding: 10px 20px;
+  font-size: 20px;
+  font-weight: bolder;
+  height: 50px;
+  width: 250px;
 }
 
 .error-format {
