--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,6 +1,7 @@
 
-$wolox-green: #8DC63F;
-$wolox-blue: rgba(85, 164, 218, 0.7);
+$wolox-green: #93BC3D;
+$wolox-blue: #2B99D1;
+$wolox-black: #000;
 $translucent-white: rgba(255, 255, 255, 0.9);
 $shadow-grey: rgba(0, 0, 0, 0.1);
 $wolox-white: #FFF;
