--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -12,4 +12,5 @@
 @import '../app/components/log_in/log_in';
 @import '../app/components/principal/bookDetail/book';
 @import '../app/components/principal/profile/profile';
+@import '../app/components/map/map';
 @import '../app/components/principal/updateProf/updateProf';
