intro view plus log_in img changes

--- a/src/app/components/log_in/log_in.jade
+++ b/src/app/components/log_in/log_in.jade
@@ -1,8 +1,7 @@
 .body-back
   form.form-formate(name='log_in_registration' novalidate ng-submit='logInCtrl.requestLogIn(log_in_registration.$valid)')
       img.logo-wolox-life(src='../assets/WOLOX-LIFE-LOGO.png')
-      span.title-w-life
-        | {{ 'LOG_IN.TITLE' | translate }}
+      img.title-w-life(src='../assets/cofre.png')
       .field-section
         span.field
           | {{ 'LOG_IN.MAIL' | translate }}
