--- a/src/app/components/log_in/log_in.scss
+++ b/src/app/components/log_in/log_in.scss
@@ -19,12 +19,14 @@
 }
 
 .title-w-life {
-  align-items: center;
+  align-self: center;
   display: flex;
   flex-direction: column;
   font-size: 24px;
   font-weight: bold;
+  height: 345px;
   margin: 80px;
+  width: 270px;
 }
 
 .field-section {
