--- a/src/app/components/principal/intro/intro.jade
+++ b/src/app/components/principal/intro/intro.jade
@@ -18,5 +18,5 @@
         | O: Perks y W-eventos.
       span.title2.p-left-15
         | X: Nivel X
-  button.start-button
+  button.start-button(ui-sref='principal.map')
     | Challenge accepted
