--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -12,7 +12,7 @@ $magnifying-glass-green: #A5CD39;
 $back-grey: #D8D8D8;
 $title-black: #000;
 $author-black: #4A4A4A;
-$register-back: rgba(0, 0, 0, 0.7);
+$register-back: rgba(0, 0, 0, 0.75);
 $wolox-red: #F00;
 $soft-grey: #999;
 $bright-blue: #00ADEE;
@@ -21,3 +21,4 @@ $light-grey: #E6E6E6;
 $furious-red: #FF233E;
 $translucent-grey: #CCC;
 $yellow-green: #E0ECC1;
+$wolox-beige: #EFD2AC;
