--- a/src/app/components/level4/level4.jade
+++ b/src/app/components/level4/level4.jade
@@ -1,5 +1,13 @@
-.map
-  .row
-    .col-sm-12
-      .bubble
-        | LEV 4 
+.general-content
+  .clue-content
+    img.p-top-5(src='../assets/buddy.png')
+    .clue-title
+      | Pista
+    .intro-speach
+      span.title2.center2
+        | La raíz cuadrada de: la cantidad de fundadores más la edad de Wolox
+        | multiplicado por cinco menos uno es un número clave para la
+        | Introducción a la programación C.
+        | Buscalo en el 2ªA.
+  button.start-button(ui-sref='principal.map')
+    | Challenge accepted
