--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -10,3 +10,10 @@
     color: $wolox-green;
   }
 }
+
+.clue-title {
+  align-self: center;
+  color: $wolox-blue;
+  font-size: 80px;
+  padding-left: 70px;
+}
