--- a/src/app/components/level2/level2.jade
+++ b/src/app/components/level2/level2.jade
@@ -1,5 +1,45 @@
-.map
-  .row
-    .col-sm-12
-      .bubble
-        | LEV 2
+.intro-content
+  .perk-item
+    spam.perk-title.color-blue
+      | Profesionalismo
+    .h-line.color-blue.m-bottom-3
+    span.perk-description
+      | Los woloxers están comprometidos con los objetivos del cliente. Reciben
+      | las criticas constructivas y emplean sus conocimientos para liderar
+      | proyectos al éxito.
+  .perk-item
+    spam.perk-title.color-green.left
+      | Espíritu de equipo
+    .h-line.color-green.m-bottom-3
+    span.perk-description
+      | A pesar de las diferencias, los Woloxers siempre se respetan unos a
+      | otros. Con cooperacion, comparten sus conocimientos y experiencias.
+  .perk-item
+    spam.perk-title.color-blue
+      | Pasión
+    .h-line.color-blue.m-bottom-3
+    span.perk-description
+      | Vienen a trabajar con una sonrisa! Principalmente porque están
+      | orgullosos y aman lo que hacen.
+  .perk-item
+    spam.perk-title.color-green.left
+      | Flexibilidad
+    .h-line.color-green.m-bottom-3
+    span.perk-description
+      | Los Woloxers con ágiles y se preparan para iterar, aplicando cambios
+      | rapidamente. Además tienen un horario flexible permitiendo organizar
+      | sus propias horas de trabajo.
+  .perk-item
+    spam.perk-title.color-blue
+      | Innovación
+    .h-line.color-blue.m-bottom-3
+    span.perk-description
+      | Se debaten nuevas ideas para adquirir conocimiento. Los woloxers son
+      | proactivos y siempre están a la vanguardia de la tecnología.
+  .perk-item
+    spam.perk-title.color-green.left
+      | Proactividad
+    .h-line.color-green.m-bottom-3
+    span.perk-description.m-bottom-3
+      | Los woloxers enfrentan desafíos con conviccion y etusiasmo para ir más
+      | alla de sus propias expectativas.
