fix of views in progress

--- a/src/app/components/map/map.scss
+++ b/src/app/components/map/map.scss
@@ -35,7 +35,7 @@
 
 .map-nop-dev {
   background-image: url('../assets/weAreBuilding.png');
-  height: calc(100% - 92px);
+  height: 1188px;
 }
 
 .clue-content {
