--- a/src/app/components/log_in/log_in.jade
+++ b/src/app/components/log_in/log_in.jade
@@ -8,6 +8,6 @@
         input.mail(type='text' name='mail' required ng-model='logInCtrl.requestLogInn.mail')
         span.field
           | {{ 'LOG_IN.BUDDY' | translate }}
-        input.mail(type='password' name='password' required ng-model='logInCtrl.requestLogInn.password')
+        input.mail(type='text' name='password' required ng-model='logInCtrl.requestLogInn.password')
         button.but-style.m-top-2(type='text')
           | {{ 'LOG_IN.START' | translate }}
